--- a/index.css
+++ b/index.css
@@ -1448,10 +1448,13 @@ transition: 0.3s;
 }
 
 .about_image img {
-  width:40vw;
+  width:80vw;
+  height:40vh;
   margin: 0 auto;
 }
-
+.gallery {
+  margin-left:150px;
+}
 
 .about_content h3 {
   margin-bottom: 1rem;
@@ -1589,7 +1592,7 @@ transition: 0.3s;
   }
  
   .about_image  img{
-   width:55vw;
+   width:45vw;
    height:40vh;
     margin: 0 auto;
   }
