--- a/index.css
+++ b/index.css
@@ -1456,6 +1456,10 @@ transition: 0.3s;
 .gallery {
   margin-left:250px;
 }
+.gallery a {
+  height:50vh;
+  width:40vw;
+}
 
 .about_content h3 {
   margin-bottom: 1rem;
