--- a/index.css
+++ b/index.css
@@ -1251,7 +1251,7 @@ li {
 }
 .gallery img{
   height:50vh;
-  width:40vw;
+  width:70vw;
 }
 .gallery > a {
   grid-area: 1/1;
@@ -1449,16 +1449,12 @@ transition: 0.3s;
 }
 
 .about_image{
-  width:45vw;
+  width:47vw;
   height:40vh;
   margin: 0 auto;
 }
 .gallery {
   margin-left:250px;
-}
-.gallery a {
-  height:50vh;
-  width:40vw;
 }
 
 .about_content h3 {
@@ -1495,14 +1491,21 @@ transition: 0.3s;
    gap: 2rem;
    align-items: center;
 }
-
+.gallery {
+  --d: 10s;
+  display: grid;
+  place-content:center;
+  width: 50px;
+  margin-top:80px;
+  margin-bottom:80px;
+  margin-left:30px;
+}
 .contact_image {
-  width:40vw;
    margin: auto;
 }
 
 .contact_content form {
-    max-width: 50vw;
+    width: 100%;
     display: grid;  
     margin-top: 2rem;
     gap: 1rem;
@@ -1511,11 +1514,11 @@ transition: 0.3s;
 .contact_content .form_group {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
-   gap: 1rem;
+   gap: 2rem;
 }
 
 .contact_content :is(input, textarea) {
-   width: 60%;
+   width: 100%;
    padding: 1rem;
    outline: none;
    border: none;
@@ -1648,6 +1651,7 @@ transition: 0.3s;
  
  .contact-image{
   height:10vh;
+
  }
  
  .contact_content form {
