--- a/index.css
+++ b/index.css
@@ -1453,9 +1453,6 @@ transition: 0.3s;
   height:40vh;
   margin: 0 auto;
 }
-.gallery {
-  margin-left:250px;
-}
 
 .about_content h3 {
   margin-bottom: 1rem;
@@ -1498,10 +1495,10 @@ transition: 0.3s;
   width: 50px;
   margin-top:80px;
   margin-bottom:80px;
-  margin-left:70px;
+  margin-left:90px;
 }
 .contact_image {
-
+  width:50vw;
    margin: auto;
 }
 
