--- a/index.css
+++ b/index.css
@@ -983,7 +983,7 @@ li {
 #about{
     padding-top:110px;
     padding-bottom:100px;
-   padding-left:50px;
+   padding-left:20px;
 }
 .dark-theme #about{
     color:white;
@@ -1078,155 +1078,155 @@ li {
   background-position:0 0;
 }
 .one2 {
-  background-position:0 -100%;
+  background-position:0 -50%;
   animation-delay: .1s;
 }
 .one3 {
-  background-position:0 -200%;
+  background-position:0 -150%;
   animation-delay: .2s;
 }
 .one4 {
-  background-position:0 -300%;
+  background-position:0 -250%;
   animation-delay: .3s;
 }
 .one5 {
-  background-position:0 -400%;
+  background-position:0 -350%;
   animation-delay: .4s;
 }
 .one6 {
-  background-position:0 -500%;
+  background-position:0 -450%;
   animation-delay: .5s;
 }
 .one7 {
-  background-position:0 -600%;
+  background-position:0 -550%;
   animation-delay: .6s;
 }
 .one8 {
-  background-position:0 -700%;
+  background-position:0 -650%;
   animation-delay: .7s;
 }
 .one9 {
-  background-position:0 -800%;
+  background-position:0 -750%;
   animation-delay: .8s;
 }
 .one10 {
-  background-position:0 -900%;
+  background-position:0 -850%;
   animation-delay: .9s;
 }
 .one11 {
-  background-position:0 -1000%;
+  background-position:0 -950%;
   animation-delay: 1s;
 }
 .one12 {
-  background-position:0 -1100%;
+  background-position:0 -1050%;
   animation-delay: 1.1s;
 }
 .one13 {
-  background-position:0 -1200%;
+  background-position:0 -1150%;
   animation-delay: 1.2s;
 }
 .one14 {
-  background-position:0 -1300%;
+  background-position:0 -1250%;
   animation-delay: 1.3s;
 }
 .one15{
-  background-position:0 -1400%;
+  background-position:0 -1350%;
   animation-delay: 1.4s;
 }
 .one16{
-  background-position:0 -1500%;
+  background-position:0 -1450%;
   animation-delay: 1.5s;
 }
 .one17{
-  background-position:0 -1600%;
+  background-position:0 -1550%;
   animation-delay: 1.6s;
 }
 .one18{
-  background-position:0 -1700%;
+  background-position:0 -1650%;
   animation-delay: 1.7s;
 }
 .one19{
-  background-position:0 -1800%;
+  background-position:0 -1750%;
   animation-delay: 1.8s;
 }
 .one20{
-  background-position:0 -1900%;
+  background-position:0 -1850%;
   animation-delay: 1.9s;
 }
 .one21{
-  background-position:0 -2000%;
+  background-position:0 -1950%;
   animation-delay: 2s;
 }
 .one22{
-  background-position:0 -2100%;
+  background-position:0 -2050%;
   animation-delay: 2.1s;
 }
 .one23{
-  background-position:0 -2200%;
+  background-position:0 -2150%;
   animation-delay: 2.2s;
 }
 .one24{
-  background-position:0 -2300%;
+  background-position:0 -2250%;
   animation-delay: 2.3s;
 }
 .one25{
-  background-position:0 -2400%;
+  background-position:0 -2350%;
   animation-delay: 2.4s;
 }
 .one26{
-  background-position:0 -2500%;
+  background-position:0 -2450%;
   animation-delay: 2.5s;
 }
 .one27{
-  background-position:0 -2600%;
+  background-position:0 -2550%;
   animation-delay: 2.6s;
 }
 .one28{
-  background-position:0 -2700%;
+  background-position:0 -2650%;
   animation-delay: 2.7s;
 }
 .one29{
-  background-position:0 -2800%;
+  background-position:0 -2750%;
   animation-delay: 2.8s;
 }
 .one30{
-  background-position:0 -2900%;
+  background-position:0 -2850%;
   animation-delay: 2.9s;
 }
 .one31{
-  background-position:0 -3000%;
+  background-position:0 -2950%;
   animation-delay: 3s;
 }
 .one32{
-  background-position:0 -3100%;
+  background-position:0 -3050%;
   animation-delay: 3.1s;
 }
 .one32{
-  background-position:0 -3100%;
+  background-position:0 -3150%;
   animation-delay: 3.1s;
 }
 .one33{
-  background-position:0 -3200%;
+  background-position:0 -3250%;
   animation-delay: 3.2s;
 }
 .one34{
-  background-position:0 -3300%;
+  background-position:0 -3350%;
   animation-delay: 3.3s;
 }
 .one35{
-  background-position:0 -3400%;
+  background-position:0 -3450%;
   animation-delay: 3.4s;
 }
 .one36{
-  background-position:0 -3500%;
+  background-position:0 -3550%;
   animation-delay: 3.5s;
 }
 .one37{
-  background-position:0 -3600%;
+  background-position:0 -3650%;
   animation-delay: 3.6s;
 }
 .one38{
-  background-position:0 -3700%;
+  background-position:0 -3750%;
   animation-delay: 3.7s;
 }
 
@@ -1250,8 +1250,8 @@ li {
   margin-left:80px;
 }
 .gallery img{
-  height:50vh;
-  width:70vw;
+  height:60vh;
+  width:40vw;
 }
 .gallery > a {
   grid-area: 1/1;
@@ -1315,9 +1315,6 @@ li {
     z-index: 2;
   }
 }
-
-
-
  #contact h2{
   color: #5d5fef;
   margin-bottom:20px;
@@ -1449,11 +1446,13 @@ transition: 0.3s;
 }
 
 .about_image{
-  width:47vw;
+  width:57vw;
   height:40vh;
   margin: 0 auto;
 }
-
+.links{
+  margin:0;
+}
 .about_content h3 {
   margin-bottom: 1rem;
   font-size: 1.3rem;
@@ -1492,7 +1491,7 @@ transition: 0.3s;
   --d: 10s;
   display: grid;
   place-content:center;
-  width: 50px;
+  max-width: 40vw;
   margin-top:80px;
   margin-bottom:80px;
   margin-left:90px;
@@ -1591,9 +1590,9 @@ transition: 0.3s;
 }
  
  @media screen and (max-width:830px){
-  .nav_links{
-    width:50%;
-    margin:2px;
+  .links{
+    width:100%;
+    margin:0px;
   }
   .about_container {
     display: grid;
@@ -1603,9 +1602,9 @@ transition: 0.3s;
   }
  
   .about_image{
-   width:55vw;
+   width:80vw;
    height:50vh;
-    margin: 0 auto;
+    margin: auto;
   }
  
   .about_content h3 {
@@ -1623,7 +1622,6 @@ transition: 0.3s;
  
   .about_grid {
     margin-top: 2rem;
-    
     gap: 1rem;
   }
  
@@ -1646,12 +1644,16 @@ transition: 0.3s;
     gap: 2rem;
     align-items: center;
  }
- 
- .contact-image{
-  height:10vh;
-
+ .gallery img{
+  height:40vh;
+  width:60vw;
+}
+ .contact_image{
+  height:70vh;
+ width:20vw;
+ margin-left:0;
  }
- 
+
  .contact_content form {
      width: 100%;
      display: grid; 
@@ -1673,11 +1675,6 @@ transition: 0.3s;
     font-size: 1rem;
     background-color:#f8f8f8;
    border-radius: 5px;
- }
- .contact-img{
-height:50vh;
-width:60vw;
-margin-top:0;
  }
  .contact_content textarea {
     font-family: sans-serif;
