--- a/index.css
+++ b/index.css
@@ -1452,6 +1452,7 @@ transition: 0.3s;
 }
 .links{
   margin:0;
+  flex:wrap;
 }
 .about_content h3 {
   margin-bottom: 1rem;
@@ -1497,7 +1498,8 @@ transition: 0.3s;
   margin-left:90px;
 }
 .contact_image {
-  width:50vw;
+  width:60vw;
+  height:50vh;
    margin: auto;
 }
 
@@ -1649,7 +1651,7 @@ transition: 0.3s;
   width:60vw;
 }
  .contact_image{
-  height:70vh;
+  height:60vh;
  width:80vw;
  margin-left:0;
  }
