--- a/index.css
+++ b/index.css
@@ -36,7 +36,6 @@
    top:0px;
  }
  .nav_links {
-
     list-style: none;
     display: flex;
     align-items: center;
@@ -1232,7 +1231,7 @@ li {
 
 #project{
   padding-top:30px;
-  padding-bottom:50px;
+  padding-bottom:40px;
   display:grid;
   place-content: center;
 }
@@ -1450,9 +1449,8 @@ transition: 0.3s;
   height:40vh;
   margin: 0 auto;
 }
-.links{
-  margin:0;
-  flex:wrap;
+.nav_links{
+  gap:0.5rem;
 }
 .about_content h3 {
   margin-bottom: 1rem;
@@ -1495,7 +1493,7 @@ transition: 0.3s;
   max-width: 40vw;
   margin-top:80px;
   margin-bottom:80px;
-  margin-left:90px;
+  margin-left:110px;
 }
 .contact_image {
   width:60vw;
@@ -1592,10 +1590,9 @@ transition: 0.3s;
 }
  
  @media screen and (max-width:830px){
-  .links{
-    width:100%;
-    margin:0px;
-  }
+.nav_links{
+  gap:1rem;
+}
   .about_container {
     display: grid;
     grid-template-columns: 1fr;
