--- a/index.css
+++ b/index.css
@@ -28,7 +28,7 @@
 .nav_bar {
     max-width: var(--max-width);
     margin: auto;
-   
+    padding-bottom:10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
