--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@
     align-items: center;
     justify-content: space-between;
     position:sticky;
-   top:0px;
+     top:0px;
  }
  .nav_links {
     list-style: none;
@@ -42,7 +42,7 @@
     gap: 1rem;
  }
  .link a {
-    padding: 7px;
+    padding: 10px;
     font-family: 600;
     color: var(--text-dark);
  }
@@ -1451,6 +1451,9 @@ transition: 0.3s;
 }
 .nav_links{
   gap:0.5rem;
+}
+.link a{
+  padding:5px;
 }
 .about_content h3 {
   margin-bottom: 1rem;
