--- a/index.css
+++ b/index.css
@@ -1450,10 +1450,14 @@ transition: 0.3s;
   margin: 0 auto;
 }
 .nav_links{
-  gap:0.5rem;
+  gap:0.3rem;
+  padding-bottom:10px;
 }
 .link a{
   padding:0px;
+}
+.btn{
+  gap:0.5rem;
 }
 .about_content h3 {
   margin-bottom: 1rem;
