--- a/index.css
+++ b/index.css
@@ -1227,6 +1227,14 @@ li {
   display:grid;
   place-content: center;
 }
+#project h1{
+  margin-left:50px;
+}
+ 
+#project h3{
+  font-size:25px;
+  margin:auto;
+}
 .dark-theme #project{
   background-color: #000;
   color:#5d5fef;
@@ -1236,13 +1244,13 @@ li {
   display: grid;
   place-content:center;
   width: 50px;
-  margin-top:80px;
-  margin-bottom:80px;
-  margin-left:80px;
+  margin:auto;
 }
 .gallery img{
   height:60vh;
   width:40vw;
+  margin-top:120px;
+  margin-bottom:150px;
 }
 .gallery > a {
   grid-area: 1/1;
@@ -1305,6 +1313,9 @@ li {
   90% {
     z-index: 2;
   }
+}
+#contact{
+  margin-top:50px;
 }
  #contact h2{
   color: #5d5fef;
@@ -1466,7 +1477,9 @@ transition: 0.3s;
   margin-top: 2rem; 
   gap: 1rem;
 }
-
+#project h3{
+  font-size:15px;
+}
 .about_card h4 {
   margin-bottom: 7px;
   font-size: 2rem;
@@ -1645,9 +1658,13 @@ transition: 0.3s;
     gap: 2rem;
     align-items: center;
  }
+
  .gallery img{
   height:40vh;
   width:60vw;
+  margin:auto;
+  margin-top:70px;
+  margin-bottom:50px;
 }
  .contact_image{
   height:60vh;
@@ -1743,3 +1760,59 @@ transition: 0.3s;
 }
 
  }
+
+ .pic-ctn {
+  width: 100vw;
+  height: 200px;
+}
+
+@keyframes display {
+  0% {
+    transform: translateX(200px);
+    opacity: 0;
+  }
+  10% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  20% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  30% {
+    transform: translateX(-200px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(-200px);
+    opacity: 0;
+  }
+}
+
+.pic-ctn {
+  position: relative;
+  width: 100vw;
+  height: 300px;
+  margin-top: 15vh;
+}
+
+.pic-ctn > img {
+  position: absolute;
+  top: 0;
+  left: calc(50% - 100px);
+  opacity: 0;
+  animation: display 10s infinite;
+}
+
+img:nth-child(2) {
+  animation-delay: 2s;
+}
+img:nth-child(3) {
+  animation-delay: 4s;
+}
+img:nth-child(4) {
+  animation-delay: 6s;
+}
+img:nth-child(5) {
+  animation-delay: 8s;
+}
