--- a/index.css
+++ b/index.css
@@ -1508,8 +1508,8 @@ transition: 0.3s;
   margin-bottom:80px;
 }
 .gallery img{
-  margin:auto;
-  margin-top:60px;
+  margin-left:110px;
+  margin-top:40px;
   margin-bottom:40px;
 }
 .contact_image {
