--- a/index.css
+++ b/index.css
@@ -1503,13 +1503,10 @@ transition: 0.3s;
   display: grid;
   place-content:center;
   margin-top:80px;
-  margin-bottom:80px;
+  margin-bottom:50px;
+  margin-left:auto;
 }
-.gallery img{
-  margin-left:160px;
-  margin-top:40px;
-  margin-bottom:40px;
-}
+
 .contact_image {
   width:100vw;
   height:40vh;
