--- a/index.css
+++ b/index.css
@@ -1481,7 +1481,7 @@ transition: 0.3s;
   font-size:15px;
 }
 .gallery{
-  overflow-x:hidden;
+  margin-left:250px;
 }
 .about_card h4 {
   margin-bottom: 7px;
