--- a/index.css
+++ b/index.css
@@ -1315,7 +1315,7 @@ li {
   }
 }
 #contact{
-  margin-top:50px;
+   padding-top:50px;
 }
  #contact h2{
   color: #5d5fef;
@@ -1479,6 +1479,7 @@ transition: 0.3s;
 }
 #project h3{
   font-size:15px;
+  margin-top:30px;
 }
 .gallery{
   margin-left:250px;
@@ -1756,7 +1757,7 @@ transition: 0.3s;
 
  .pic-ctn {
   width: 100vw;
-  height: 200px;
+  height: 300px;
 }
 
 @keyframes display {
@@ -1789,7 +1790,7 @@ transition: 0.3s;
   margin-top: 15vh;
 }
 
-.pic-ctn > img {
+.pic-ctn > a {
   position: absolute;
   top: 0;
   left: calc(50% - 100px);
@@ -1797,15 +1798,18 @@ transition: 0.3s;
   animation: display 10s infinite;
 }
 
-img:nth-child(2) {
+a:nth-child(2) {
   animation-delay: 2s;
 }
-img:nth-child(3) {
+a:nth-child(3) {
   animation-delay: 4s;
 }
-img:nth-child(4) {
+a:nth-child(4) {
   animation-delay: 6s;
 }
-img:nth-child(5) {
+a:nth-child(5) {
   animation-delay: 8s;
+}
+a:nth-child(6) {
+  animation-delay: 10s;
 }
