--- a/index.css
+++ b/index.css
@@ -1785,9 +1785,10 @@ transition: 0.3s;
 
 .pic-ctn {
   position: relative;
-  width: 50vw;
+  width: 70vw;
   height: 300px;
   margin-top: 15vh;
+  overflow-x:hidden;
 }
 
 .pic-ctn > a {
