--- a/index.css
+++ b/index.css
@@ -1255,9 +1255,25 @@ li {
 }
 .gallery > a {
   grid-area: 1/1;
-  width: 20%;
+  width: 70%;
   z-index: 2;
   animation: slide var(--d) infinite, z-order var(--d) infinite steps(1);
+}
+@media screen and (max-width:450px){
+  .gallery > a {
+    grid-area: 1/1;
+    width: 20%;
+    z-index: 2;
+    animation: slide var(--d) infinite, z-order var(--d) infinite steps(1);
+  }
+}
+@media screen and (max-width:930px){
+  .gallery > a {
+    grid-area: 1/1;
+    width: 30%;
+    z-index: 2;
+    animation: slide var(--d) infinite, z-order var(--d) infinite steps(1);
+  }
 }
 
 .gallery a:last-child {
