--- a/index.css
+++ b/index.css
@@ -1568,7 +1568,8 @@ transition: 0.3s;
 }
 .footer {
   background-color: #131516;
-  width:100%;
+  background-size: cover;
+  width:100vw;
 }
 
 .footer_container {
