--- a/index.css
+++ b/index.css
@@ -1063,7 +1063,8 @@ li {
   background-image: url('about.png');
   background-size: cover;
   backface-visibility: visible;
-  animation: turner 10s infinite;
+  animation: turner 15s infinite;
+  border-radius:20px;
 }
 .one {
   background-position:0 0;
@@ -1071,154 +1072,6 @@ li {
 .one2 {
   background-position:0 -50%;
   animation-delay: .1s;
-}
-.one3 {
-  background-position:0 -150%;
-  animation-delay: .2s;
-}
-.one4 {
-  background-position:0 -250%;
-  animation-delay: .3s;
-}
-.one5 {
-  background-position:0 -350%;
-  animation-delay: .4s;
-}
-.one6 {
-  background-position:0 -450%;
-  animation-delay: .5s;
-}
-.one7 {
-  background-position:0 -550%;
-  animation-delay: .6s;
-}
-.one8 {
-  background-position:0 -650%;
-  animation-delay: .7s;
-}
-.one9 {
-  background-position:0 -750%;
-  animation-delay: .8s;
-}
-.one10 {
-  background-position:0 -850%;
-  animation-delay: .9s;
-}
-.one11 {
-  background-position:0 -950%;
-  animation-delay: 1s;
-}
-.one12 {
-  background-position:0 -1050%;
-  animation-delay: 1.1s;
-}
-.one13 {
-  background-position:0 -1150%;
-  animation-delay: 1.2s;
-}
-.one14 {
-  background-position:0 -1250%;
-  animation-delay: 1.3s;
-}
-.one15{
-  background-position:0 -1350%;
-  animation-delay: 1.4s;
-}
-.one16{
-  background-position:0 -1450%;
-  animation-delay: 1.5s;
-}
-.one17{
-  background-position:0 -1550%;
-  animation-delay: 1.6s;
-}
-.one18{
-  background-position:0 -1650%;
-  animation-delay: 1.7s;
-}
-.one19{
-  background-position:0 -1750%;
-  animation-delay: 1.8s;
-}
-.one20{
-  background-position:0 -1850%;
-  animation-delay: 1.9s;
-}
-.one21{
-  background-position:0 -1950%;
-  animation-delay: 2s;
-}
-.one22{
-  background-position:0 -2050%;
-  animation-delay: 2.1s;
-}
-.one23{
-  background-position:0 -2150%;
-  animation-delay: 2.2s;
-}
-.one24{
-  background-position:0 -2250%;
-  animation-delay: 2.3s;
-}
-.one25{
-  background-position:0 -2350%;
-  animation-delay: 2.4s;
-}
-.one26{
-  background-position:0 -2450%;
-  animation-delay: 2.5s;
-}
-.one27{
-  background-position:0 -2550%;
-  animation-delay: 2.6s;
-}
-.one28{
-  background-position:0 -2650%;
-  animation-delay: 2.7s;
-}
-.one29{
-  background-position:0 -2750%;
-  animation-delay: 2.8s;
-}
-.one30{
-  background-position:0 -2850%;
-  animation-delay: 2.9s;
-}
-.one31{
-  background-position:0 -2950%;
-  animation-delay: 3s;
-}
-.one32{
-  background-position:0 -3050%;
-  animation-delay: 3.1s;
-}
-.one32{
-  background-position:0 -3150%;
-  animation-delay: 3.1s;
-}
-.one33{
-  background-position:0 -3250%;
-  animation-delay: 3.2s;
-}
-.one34{
-  background-position:0 -3350%;
-  animation-delay: 3.3s;
-}
-.one35{
-  background-position:0 -3450%;
-  animation-delay: 3.4s;
-}
-.one36{
-  background-position:0 -3550%;
-  animation-delay: 3.5s;
-}
-.one37{
-  background-position:0 -3650%;
-  animation-delay: 3.6s;
-}
-.one38{
-  background-position:0 -3750%;
-  animation-delay: 3.7s;
 }
 
 #project{
@@ -1430,6 +1283,10 @@ margin-bottom: 1rem;
 color:#f8f8f8;
 transition: 0.3s; 
 }
+
+.footer_col a span {
+  margin-right: 5px;
+}
 .footer_col a:hover {
   color: #4b4dbf;
 }
@@ -1444,6 +1301,7 @@ transition: 0.3s;
   color: #fff;
   cursor: pointer;
 }
+
 
 
  @media screen and (max-width:450px){
@@ -1795,13 +1653,13 @@ transition: 0.3s;
 
 .pic-ctn {
   position: relative;
-  width: 70vw;
+  width: 100vw;
   height: 300px;
   margin-top: 15vh;
 }
 @media screen and (max-width:450px){
   .pic-ctn{
-    width:50vw;
+    width:45vw;
   }
 }
 .pic-ctn > a {
